most styling complete but make some text inputs 100% and fix spacing vertical and fix choose files

--- a/templates/stylesheet.css
+++ b/templates/stylesheet.css
@@ -116,13 +116,17 @@ input[type=text], select {
   flex-direction: column;
 
 }
-.billing input, select {
+
+.billing input, .billing select {
   flex: 1 1 auto; 
   width: 100%; 
 }
 
-.accept label, a {
+
+
+/* .accept label, a {
   display: inline;
-}
+}  */
+
 
 
